# some_executor

./: AGENTS.md  CHANGELOG.md  Cargo.toml  NOTICE  README.md  webdriver.json
.cargo/: config.toml
.github/workflows/: ci.yaml
scripts/: capture-logs.js  wasm-test-with-logs.sh
src/: context.rs  current_executor.rs  dyn_executor.rs  dyn_observer.rs  dyn_observer_notified.rs  global_executor.rs  global_runtime.rs  hint.rs  last_resort.rs  lib.rs  local.rs  local_last_resort.rs  observer.rs  static_last_resort.rs  static_support.rs  sys.rs  task.rs  thread_executor.rs
src/context/: futures.rs  local_key.rs  local_key_immutable.rs  macros.rs
src/sys/: stdlib.rs  wasm.rs
src/task/: config.rs  convenience.rs  dyn_spawned.rs  objsafe.rs  spawn.rs  spawned.rs  task_local.rs
tests/: executor_yield_test.rs  static_brute.rs
