[package]
name = "some_executor"
version = "0.2.0"
authors = ["Drew Crawford <drew@sealedabstract.com>"]
edition = "2021"
description = "A trait for libraries that abstract over any executor"
rust-version = "1.75.0"
homepage = "https://sealedabstract.com/code/some_executor"
repository = "https://github.com/drewcrawford/some_executor"
license = "MIT OR Apache-2.0"
keywords = ["async","rumtime","agnostic","trait"]
categories = ["asynchronous","concurrency"]
exclude = [".*","art"]

[dependencies]
priority = "0.1.1"

[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-time = "1.1"


[target.'cfg(target_arch="wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.45"