[package]
name = "some_executor"
version = "0.6.0"
authors = ["Drew Crawford <drew@sealedabstract.com>"]
edition = "2024"
description = "A trait for libraries that abstract over any executor"
rust-version = "1.88.0" # Cell.update
homepage = "https://sealedabstract.com/code/some_executor"
repository = "https://github.com/drewcrawford/some_executor"
license = "MIT OR Apache-2.0"
keywords = ["async","rumtime","agnostic","trait"]
categories = ["asynchronous","concurrency","wasm","web-programming"]
exclude = [".*","art"]

[dependencies]
priority = "0.1.1"
atomic-waker = "1.1.2"
continue = "0.1"


[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-time = "1.1"
wasm_thread = "0.3.3"
web-sys = { version = "0.3.76", features=["console"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3.77"

[dev-dependencies]
test_executors = "0.3"

[target.'cfg(target_arch="wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.45"